jekyll/_cci2/server/v4.1/installation/phase-1-prerequisites.adoc
---
contentTags:
  platform:
  - Server v4.1
  - Server Admin
noindex: true
component: server-admin-4.1
module: installation
---
= Phase 1 - Prerequisites
:page-layout: classic-docs
:page-description: Find the general and infrastructure-specific requirements that are needed in order to configure the CircleCI server v4.1 application.
:icons: font
:experimental:

// This doc uses ifdef and ifndef directives to display or hide content specific to Google Cloud Storage (env-gcp) and AWS (env-aws). Currently, this affects only the generated PDFs. To ensure compatability with the Jekyll version, the directives test for logical opposites. For example, if the attribute is NOT env-aws, display this content. For more information, see https://docs.asciidoctor.org/asciidoc/latest/directives/ifdef-ifndef/.

CircleCI server v4.x is installed as a Helm chart. The installation process is broken down into four phases. There is a validation step at the end of each phase, allowing you to confirm success before moving to the next phase. Depending on your requirements, phases 3 and 4 may include multiple steps. This installation guide assumes you have already read the xref:../overview/circleci-server-overview#[CircleCI server v4.1 overview].

NOTE: In the following sections, replace any sections indicated by `< >` with your details.

[#install-required-software]
== 1. Install required software
Download and install the following software before continuing:

[.table.table-striped]
[cols=4*, options="header", stripes=even]
|===
| Tool
| Version
| Used for
| Notes

| link:https://www.terraform.io/downloads.html[Terraform]
| {terraformversion} or greater
| Infrastructure Management
|

| link:https://kubernetes.io/docs/tasks/tools/install-kubectl/[kubectl]
| {kubectlversion} or greater
| Kubernetes CLI
|

| link:https://helm.sh/[Helm]
| {helmversion} or greater
| Kubernetes Package Management
|

| link:https://github.com/databus23/helm-diff[Helm Diff]
| {helmdiffversion} or greater
| Helping with `values.yaml` changes and updates
| Optional, but may help with troubleshooting between releases
|===

// Don't include this section in the GCP PDF.

ifndef::env-gcp[]

[#aws-required-software]
=== AWS required software

- link:https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-install.html[AWS CLI]

// Stop hiding from GCP PDF:

endif::env-gcp[]

// Don't include this section in the AWS PDF:

ifndef::env-aws[]

[#gcp-required-software]
=== GCP required software

- `gcloud` and `gsutil`. You can install and set-up these tools up by installing Google Cloud SDK. For further information refer to the link:https://cloud.google.com/sdk/docs/[Google Cloud SDK docs].

endif::env-aws[]

[#s3-compatible-storage-required-software]
=== S3 compatible storage required software

- Install and configure link:https://docs.min.io/docs/minio-client-quickstart-guide.html[MinIO CLI] for your storage provider.

[#create-a-kubernetes-cluster]
== 2. Create a Kubernetes cluster
CircleCI server installs into an existing Kubernetes cluster. The application uses a large number of resources. Depending on your usage, your Kubernetes cluster should meet the following requirements:

[.table.table-striped]
[cols=5*, options="header", stripes=even]
|===
| Number of daily active CircleCI users
| Minimum Nodes
| Total CPU
| Total RAM
| NIC speed

| < 500
| 3
| 12 cores
| 32 GB
| 1 Gbps

| 500+
| 3
| 48 cores
| 240 GB
| 10 Gbps
|===

[#vpc-cluster-sizing-recommendations]
=== VPC and cluster sizing recommendations

While there are no strict requirements for VPC (Virtual Private Cloud) setup or disk size, the following practices are recommended for optimal performance and stability in production environments.

* **VPC Selection**
+
We recommend you create a new VPC specifically for CircleCI server and its components, rather than using an existing VPC.

*  **Subnet Provisioning**
+
For high availability, and to avoid potential outages, you should provision subnets using /18 CIDR blocks across multiple Availability Zones.

[#supported-kubernetes-versions]
=== Supported Kubernetes versions

[.table.table-striped]
[cols=2*, options="header", stripes=even]
|===
| CircleCI Version
| Kubernetes Version

| 4.1.x
| 1.22 - 1.24
|===

[#minimum-permissions-requirments]
=== Minimum permissions requirements

The installing user must have **at least** admin permissions for the namespace into which CircleCI is to be installed.

ifndef::env-gcp[]

[#eks]
=== EKS
You can learn more about creating an Amazon EKS cluster in the link:https://aws.amazon.com/quickstart/architecture/amazon-eks/[EKS docs]. We recommend using link:https://docs.aws.amazon.com/eks/latest/userguide/getting-started-eksctl.html[`eksctl`] to create your cluster, which creates a VPC and selects the proper security groups for you.

. link:https://docs.aws.amazon.com/cli/latest/userguide/install-cliv2.html[Install] and link:https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html[configure] the AWS CLI for your AWS account.
. Install link:https://docs.aws.amazon.com/eks/latest/userguide/eksctl.html[`eksctl`].
. Create your cluster by running the following (Cloud formation with `eksctl` and EKS can take more than 20 minutes to complete):
+
[source,shell]
----
eksctl create cluster --name=circleci-server --nodes 4 --node-type m5.xlarge
----
. Once the cluster has been created, you can use the following command to configure `kubectl` access:
+
[source,shell]
----
eksctl utils write-kubeconfig --cluster circleci-server
----

NOTE: You may see the following error `AWS STS Access - cannot get role ARN for current session: InvalidClientTokenID`. This means your AWS credentials are invalid, or your IAM user does not have permission to create an EKS cluster. Proper IAM permissions are necessary to use `eksctl`. See the AWS documentation on link:https://aws.amazon.com/iam/features/manage-permissions/[IAM permissions].

NOTE: As of EKS 1.24, EKS will no longer have the EBS CSI Driver installed by default. This means that EKS cannot manage the EBS volumes for the persistent volumes of your cluster. CircleCI uses persistent volumes for services such as PostgreSQL, MongoDB and Redis. You may manually provision persistence volumes or you may install the EBS CSI Driver on your cluster following the link:https://docs.aws.amazon.com/eks/latest/userguide/ebs-csi.html[AWS documentation].

endif::env-gcp[]

ifndef::env-aws[]

[#gke]
=== GKE
You can learn more about creating a GKE cluster in the link:https://cloud.google.com/kubernetes-engine/docs/how-to#creating-clusters[GKE docs].

CAUTION: Do not use Autopilot cluster. CircleCI requires functionality that is not supported by GKE Autopilot.

. link:https://cloud.google.com/sdk/gcloud[Install] and link:https://cloud.google.com/kubernetes-engine/docs/quickstart#defaults[configure] the GCP CLI for your GCP account. This includes creating a Google Project, which will be required to create a cluster within your project.
+
NOTE: When you create your project, make sure you also enable API access. If you do not enable API access, the command we will run next (to create your cluster) will fail.
+
Setting the default `project id`, compute `zone` and `region` will make running subsequent commands easier:
+
[source,shell]
----
gcloud config set project <PROJECT_ID>
gcloud config set compute/zone <ZONE>
gcloud config set compute/region <REGION>
----
. Create your cluster.
+
TIP: CircleCI recommends using link:https://cloud.google.com/kubernetes-engine/docs/how-to/workload-identity[Workload Identity] to allow workloads/pods in your GKE clusters to impersonate Identity and Access Management (IAM) service accounts to access Google Cloud services.
+
Use the following command to provision a simple cluster:
+
[source,shell]
----
gcloud container clusters create circleci-server \
  --num-nodes 3 \
  --machine-type n1-standard-4 \
  --workload-pool=<PROJECT_ID>.svc.id.goog
----
+
Your kube-context should get updated with the new cluster credentials automatically. If you need to update your kube-context manually, you can by running the following:
+
[source,shell]
----
gcloud container clusters get-credentials circleci-server
----
. Install the link:https://cloud.google.com/blog/products/containers-kubernetes/kubectl-auth-changes-in-gke[GKE authentication plugin] for `kubectl`:
+
[source,shell]
----
gcloud components install gke-gcloud-auth-plugin
----
. Verify your cluster:
+
[source,shell]
----
kubectl cluster-info
----
. Create a service account to be used for authentication with Workload Identity:
+
[source,shell]
----
gcloud iam service-accounts create <SERVICE_ACCOUNT_ID> --description="<DESCRIPTION>" \
  --display-name="<DISPLAY_NAME>"
----
. Create a private key for your service account:
+
[source,shell]
----
gcloud iam service-accounts keys create <KEY_FILE> \
  --iam-account <SERVICE_ACCOUNT_ID>@<PROJECT_ID>.iam.gserviceaccount.com
----
endif::env-aws[]

[#enable-workload-identity-in-gke]
==== Enable Workload Identity in GKE (optional)
Follow these steps if you already have a GKE cluster and need to enable Workload Identity on the cluster and the node pools.

. Enable Workload Identity on existing cluster:
+
[source,shell]
----
  gcloud container clusters update "<CLUSTER_NAME>" \
    --workload-pool="<PROJECT_ID>.svc.id.goog"
----
. Create a service account to be used for authentication with Workload Identity:
+
[source,shell]
----
gcloud iam service-accounts create <SERVICE_ACCOUNT_ID> --description="<DESCRIPTION>" \
  --display-name="<DISPLAY_NAME>"
----
. Create a private key for your service account:
+
[source,shell]
----
gcloud iam service-accounts keys create <KEY_FILE> \
  --iam-account <SERVICE_ACCOUNT_ID>@<PROJECT_ID>.iam.gserviceaccount.com
----
. Get node pools of existing GKE cluster:
+
[source,shell]
----
  gcloud container node-pools list --cluster "<CLUSTER_NAME>"
----

. Update existing node pools:
+
[source,shell]
----
  gcloud container node-pools update "<NODEPOOL_NAME>" \
    --cluster="<CLUSTER_NAME>" \
    --workload-metadata="GKE_METADATA"
----

You must repeat Step 3 for all the existing node pools. Follow these links for steps to enable Workload Identity for your Kubernetes service accounts:

* xref:phase-3-execution-environments#gcp[Nomad Autoscaler]
* xref:phase-3-execution-environments#gcp-authentication[VM]
* xref:phase-1-prerequisites#google-cloud-storage[Object-Storage]

[#create-a-new-github-oauth-app]
== 3. Create a new GitHub OAuth app

CAUTION: If GitHub Enterprise and CircleCI server are not on the same domain, then images and icons from GHE will fail to load in the CircleCI web app.

Registering and setting up a new GitHub OAuth app for CircleCI server allows for authorization control to your server installation using GitHub OAuth and for updates to GitHub projects/repos using build status information. The following steps apply for both GitHub.com and GitHub Enterprise.

. In your browser, navigate to menu:Your-GitHub-instance[User Settings>Developer Settings>OAuth Apps] and select btn:[New OAuth App].
+
.New GitHub OAuth App
image::github-oauth-new.png[Screenshot showing setting up a new OAuth app]

. Complete the following fields, based on your planned installation:
** *Homepage URL*: The URL of your planned CircleCI installation.
** *Authorization callback URL*: The authorization callback URL is the URL of your planned CircleCI installation followed by `/auth/github`

. Once completed, you will be shown the *Client ID*. Select *Generate a new Client Secret* to generate a Client Secret for your new OAuth App. You will need these values when you configure CircleCI server.
+
.Client ID and Secret
image::github-clientid.png[Screenshot showing GitHub Client ID]

[#github-enterprise]
=== GitHub Enterprise

If using GitHub Enterprise, you also need a personal access token and the domain name of your GitHub Enterprise instance.

Create the `defaultToken` by navigating to **User Settings > Developer Settings > Personal access tokens**. The default token requires no scopes. You will need this value when you configure CircleCI server.

[#static-ip-address]
== 4. Static IP addresses
It is recommended to provision a static IP address to assign to the load balancer created by the cluster. While this is not necessary, it does eliminate the need to update DNS records if the service-created load balancer is re-provisioned.

ifndef::env-gcp[]
[#gcp-reserve-a-static-external-ip-address]
=== GCP - Reserve a static external IP address
The link:https://cloud.google.com/compute/docs/ip-addresses/reserve-static-external-ip-address#external-ip[Google Cloud docs] provide information on how reserve an IP address.

Make note of the returned IPv4 address for use later in the `values.yaml` file.

endif::env-gcp[]

ifndef::env-aws[]
[#aws-reserve-an-elastic-ip-address]
=== AWS - Reserve an elastic IP address
To reserve an elastic IP address in AWS, run the following AWS CLI commands in your desired environment.

This command needs to be run to generate an address for every subnet the load balancer deploys into - default 3.

[source,shell]
----
# Run x times per x subnets (default 3)
aws ec2 allocate-address

# {
#    "PublicIp": "10.0.0.1,
#    "AllocationId": "eipalloc-12345",
#    "PublicIpv4Pool": "amazon",
#    "NetworkBorderGroup": "us-east-1",
#    "Domain": "vpc"
#}
----

Make note of each of the returned `AllocationId` values from the CLI for use in the `values.yaml` file.

endif::env-aws[]

[#frontend-tls-certificates]
== 5. Frontend TLS certificates
By default, CircleCI server creates self-signed certificates to get you started. In production, you should supply a certificate from a trusted certificate authority. The link:https://letsencrypt.org/[Let's Encrypt] certificate authority, for example, can issue a free certificate using their link:https://certbot.eff.org/[Certbot] tool. The sections below cover using Google Cloud DNS and AWS Route 53.

CAUTION: It is important that your certificate contains both your domain and the `app.*` subdomain as subjects. For example, if you host your installation at `server.example.com`, your certificate must cover `app.server.example.com` and `server.example.com`.

Once you have created your certificates using one of the methods described below, you can use the following commands to retrieve the certificates later when you need them during this installation:

[source,shell]
----
ls -l /etc/letsencrypt/live/<CIRCLECI_SERVER_DOMAIN>
----

[source,shell]
----
cat /etc/letsencrypt/live/<CIRCLECI_SERVER_DOMAIN>/fullchain.pem
----

[source,shell]
----
cat /etc/letsencrypt/live/<CIRCLECI_SERVER_DOMAIN>/privkey.pem
----

ifndef::env-gcp[]

[#aws-route-53]
=== AWS Route 53

. If you are using AWS Route 53 for DNS, you need the `certbot-route53` plugin installed. You can install the plugin with the following command:
+
[source,shell]
----
python3 -m pip install certbot-dns-route53
----

. Then execute this example to create a private key and certificate (including intermediate certificates) locally in `/etc/letsencrypt/live/<CIRCLECI_SERVER_DOMAIN>`:
+
[source,shell]
----
certbot certonly --dns-route53 -d "<CIRCLECI_SERVER_DOMAIN>" -d "app.<CIRCLECI_SERVER_DOMAIN>"
----

endif::env-gcp[]

ifndef::env-aws[]

[#google-cloud-dns]
=== Google Cloud DNS

. If you host your DNS on Google Cloud, you need the `certbot-dns-google` plugin installed. You can install the plugin with the following command:
+
[source,shell]
----
python3 -m pip install certbot-dns-google
----
. The service account used to run `certbot` will need to have access to Cloud DNS in order to provision the necessary records used by Let's Encrypt for domain validation.
.. Create a custom role for Certbot:
+
[source,shell]
----
gcloud iam roles create certbot --project=<PROJECT_ID> \
    --title="<TITLE>" --description="<DESCRIPTION>" \
    --permissions="dns.changes.create,dns.changes.get,dns.changes.list,dns.managedZones.get,dns.managedZones.list,dns.resourceRecordSets.create,dns.resourceRecordSets.delete,dns.resourceRecordSets.list,dns.resourceRecordSets.update" \
    --stage=ALPHA
----
.. Bind the new role to the service account which we created earlier:
+
[source,shell]
----
gcloud projects add-iam-policy-binding <PROJECT_ID> \
    --member="serviceAccount:<SERVICE_ACCOUNT_ID>@<PROJECT_ID>.iam.gserviceaccount.com" \
    --role="<ROLE_NAME>"
----
. Finally, the following commands will provision a certification for your installation:
+
[source,shell]
----
certbot certonly --dns-google --dns-google-credentials <KEY_FILE> -d "<CIRCLECI_SERVER_DOMAIN>" -d "app.<CIRCLECI_SERVER_DOMAIN>"
----

[#aws-certmanager]
=== AWS Certificate Manager
Instead of provisioning your own TLS certificates, if you are setting up CircleCI server in an AWS environment, you can have AWS provision TLS certificates using Certificate Manager.

[source,shell]
----
aws acm request-certificate \
  --domain-name <CIRCLECI_SERVER_DOMAIN> \
  --subject-alternative-names app.<CIRCLECI_SERVER_DOMAIN> \
  --validation-method DNS \
  --idempotency-token circle
----

After running this command, navigate to the Certificate Manager AWS console and follow the wizard to provision the required DNS validation records with Route53. Take note of the ARN of the certificate once it is issued.

[#upstream-tls]
=== Upstream TLS termination
You may have a requirement to terminate TLS for CircleCI server outside the application. This is an alternate method to using ACM or supplying the certificate chain during Helm deployment. An example would be a proxy running in front of the CircleCI installation providing TLS termination for your domain name. In this case the CircleCI application acts as the backend for your load balancer or proxy.

CircleCI server listens on a number of ports which need to be configured depending how your are routing the traffic. See the list of port numbers below:

* Frontend / API Gateway [TCP 80, 443]
* VM service [TCP 3000]
* Nomad server [TCP 4647]
* Output processor [gRPC 8585]

Depending on your requirements you may choose to terminate TLS for only the frontend/api-gateway or provide TLS for services listening on all the ports.

NOTE: The Output Processor service communicates using gRPC and requires the proxy or load balancer to support HTTP/2.

endif::env-aws[]

[#encryption-signing-keys]
== 6. Encryption/signing keys
The keysets generated in this section are used to encrypt and sign artifacts generated by CircleCI. You will need these values to configure server.

CAUTION: Store these values securely. If they are lost, job history and artifacts will not be recoverable.

[#artifact-signing-key]
=== a. Artifact signing key
To generate an artifact signing key, run the following command:

[source,shell]
----
docker run circleci/server-keysets:latest generate signing -a stdout
----

[#encryption-signing-key]
=== b. Encryption signing key
To generate an encryption signing key, run the following command:

[source,shell]
----
docker run circleci/server-keysets:latest generate encryption -a stdout
----

[#object-storage-and-permissions]
== 7. Object storage and permissions
CircleCI server v4.x hosts build artifacts, test results, and other state object storage. The following storage options are supported:

* link:https://aws.amazon.com/s3/[AWS S3]

* link:https://min.io/[MinIO]

* link:https://cloud.google.com/storage/[Google Cloud Storage]

While any S3 compatible object storage may work, we test and support AWS S3 and MinIO.

Follow the instructions below to create a bucket and access method for S3 or GCS.

NOTE: If you are installing behind a proxy, object storage should be behind this proxy also. Otherwise, proxy details will need to be supplied at the job level within every project `.circleci/config.yml` to allow artifacts, test results, cache save and restore, and workspaces to work. For more information see the xref:installing-server-behind-a-proxy#[Installing server behind a proxy] guide.

ifndef::env-gcp[]

[#s3-storage]
=== S3 storage

[#create-aws-s3-bucket]
==== a. Create AWS S3 Bucket

[source,shell]
----
aws s3api create-bucket \
    --bucket <YOUR_BUCKET_NAME> \
    --region <YOUR_REGION> \
    --create-bucket-configuration LocationConstraint=<YOUR_REGION>
----


[#set-up-authentication-aws]
==== b. Set up authentication

You can authenticate CircleCI with S3 in one of two ways:

* IAM Roles for Service Accounts (IRSA)
* IAM access keys - **recommended**

[.tab.authentication.IRSA]
--
**Option 1:** IRSA

The following is a summary of link:https://docs.aws.amazon.com/eks/latest/userguide/iam-roles-for-service-accounts.html[AWS's Documentation on IRSA] that is sufficient for installing CircleCI.

. Create an IAM OIDC Identity Provider for your EKS Cluster.
+
[source,shell]
----
eksctl utils associate-iam-oidc-provider --cluster <CLUSTER_NAME> --approve
----

. Get the OIDC provider ARN. You will need this in later steps.
+
[source,shell]
----
aws iam list-open-id-connect-providers | grep $(aws eks describe-cluster --name <CLUSTER_NAME> --query "cluster.identity.oidc.issuer" --output text | awk -F'/' '{print $NF}')
----

. Get your OIDC provider URL. You will need this in later steps.
+
[source,shell]
----
aws eks describe-cluster --name <CLUSTER_NAME> --query "cluster.identity.oidc.issuer" --output text | sed -e "s/^https:\/\///"
----

. Create the role using the command and trust policy template below. You will need the Role ARN and name in later steps.
+
[source,shell]
----
aws iam create-role --role-name circleci-s3 --assume-role-policy-document file://<TRUST_POLICY_FILE>
----
+
[source, json]
----
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Federated": "<OIDC_PROVIDER_ARN>"
      },
      "Action": "sts:AssumeRoleWithWebIdentity",
      "Condition": {
        "StringEquals": {
          "<OIDC_PROVIDER_URL>:sub": "system:serviceaccount:<K8S_NAMESPACE>:object-storage"
        }
      }
    }
  ]
}
----

. Create the policy using the command and template below. Fill in the bucket name and the role ARN.
+
[source,shell]
----
aws iam create-policy --policy-name circleci-s3 --policy-document file://<POLICY_FILE>
----
+
[source, json]
----
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": [
        "s3:PutAnalyticsConfiguration",
        "s3:GetObjectVersionTagging",
        "s3:CreateBucket",
        "s3:GetObjectAcl",
        "s3:GetBucketObjectLockConfiguration",
        "s3:DeleteBucketWebsite",
        "s3:PutLifecycleConfiguration",
        "s3:GetObjectVersionAcl",
        "s3:PutObjectTagging",
        "s3:DeleteObject",
        "s3:DeleteObjectTagging",
        "s3:GetBucketPolicyStatus",
        "s3:GetObjectRetention",
        "s3:GetBucketWebsite",
        "s3:GetJobTagging",
        "s3:DeleteObjectVersionTagging",
        "s3:PutObjectLegalHold",
        "s3:GetObjectLegalHold",
        "s3:GetBucketNotification",
        "s3:PutBucketCORS",
        "s3:GetReplicationConfiguration",
        "s3:ListMultipartUploadParts",
        "s3:PutObject",
        "s3:GetObject",
        "s3:PutBucketNotification",
        "s3:DescribeJob",
        "s3:PutBucketLogging",
        "s3:GetAnalyticsConfiguration",
        "s3:PutBucketObjectLockConfiguration",
        "s3:GetObjectVersionForReplication",
        "s3:GetLifecycleConfiguration",
        "s3:GetInventoryConfiguration",
        "s3:GetBucketTagging",
        "s3:PutAccelerateConfiguration",
        "s3:DeleteObjectVersion",
        "s3:GetBucketLogging",
        "s3:ListBucketVersions",
        "s3:ReplicateTags",
        "s3:RestoreObject",
        "s3:ListBucket",
        "s3:GetAccelerateConfiguration",
        "s3:GetBucketPolicy",
        "s3:PutEncryptionConfiguration",
        "s3:GetEncryptionConfiguration",
        "s3:GetObjectVersionTorrent",
        "s3:AbortMultipartUpload",
        "s3:PutBucketTagging",
        "s3:GetBucketRequestPayment",
        "s3:GetAccessPointPolicyStatus",
        "s3:GetObjectTagging",
        "s3:GetMetricsConfiguration",
        "s3:PutBucketVersioning",
        "s3:GetBucketPublicAccessBlock",
        "s3:ListBucketMultipartUploads",
        "s3:PutMetricsConfiguration",
        "s3:PutObjectVersionTagging",
        "s3:GetBucketVersioning",
        "s3:GetBucketAcl",
        "s3:PutInventoryConfiguration",
        "s3:GetObjectTorrent",
        "s3:PutBucketWebsite",
        "s3:PutBucketRequestPayment",
        "s3:PutObjectRetention",
        "s3:GetBucketCORS",
        "s3:GetBucketLocation",
        "s3:GetAccessPointPolicy",
        "s3:GetObjectVersion",
        "s3:GetAccessPoint",
        "s3:GetAccountPublicAccessBlock",
        "s3:ListAllMyBuckets",
        "s3:ListAccessPoints",
        "s3:ListJobs"
      ],
      "Resource": [
        "arn:aws:s3:::<YOUR_BUCKET_NAME>",
        "arn:aws:s3:::<YOUR_BUCKET_NAME>/*"
      ]
    },
    {
      "Effect": "Allow",
      "Action": [
        "iam:GetRole",
        "sts:AssumeRole"
      ],
      "Resource": "<OBJECT_STORAGE_ROLE_ARN>"
    }
  ]
}
----

. Attach the policy to the role:
+
[source,shell]
----
aws iam attach-role-policy --role-name <OBJECT_STORAGE_ROLE_NAME> --policy-arn=<STORAGE_POLICY_ARN>
----
--

[.tab.authentication.IAM_access_keys]
--
**Option 2:** IAM access keys

. Create an IAM user for CircleCI server.
+
[source,shell]
----
aws iam create-user --user-name circleci-server
----

. Create a policy document `policy.json`.
+
[source, json]
----
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": [
        "s3:PutAnalyticsConfiguration",
        "s3:GetObjectVersionTagging",
        "s3:CreateBucket",
        "s3:GetObjectAcl",
        "s3:GetBucketObjectLockConfiguration",
        "s3:DeleteBucketWebsite",
        "s3:PutLifecycleConfiguration",
        "s3:GetObjectVersionAcl",
        "s3:PutObjectTagging",
        "s3:DeleteObject",
        "s3:DeleteObjectTagging",
        "s3:GetBucketPolicyStatus",
        "s3:GetObjectRetention",
        "s3:GetBucketWebsite",
        "s3:GetJobTagging",
        "s3:DeleteObjectVersionTagging",
        "s3:PutObjectLegalHold",
        "s3:GetObjectLegalHold",
        "s3:GetBucketNotification",
        "s3:PutBucketCORS",
        "s3:GetReplicationConfiguration",
        "s3:ListMultipartUploadParts",
        "s3:PutObject",
        "s3:GetObject",
        "s3:PutBucketNotification",
        "s3:DescribeJob",
        "s3:PutBucketLogging",
        "s3:GetAnalyticsConfiguration",
        "s3:PutBucketObjectLockConfiguration",
        "s3:GetObjectVersionForReplication",
        "s3:GetLifecycleConfiguration",
        "s3:GetInventoryConfiguration",
        "s3:GetBucketTagging",
        "s3:PutAccelerateConfiguration",
        "s3:DeleteObjectVersion",
        "s3:GetBucketLogging",
        "s3:ListBucketVersions",
        "s3:ReplicateTags",
        "s3:RestoreObject",
        "s3:ListBucket",
        "s3:GetAccelerateConfiguration",
        "s3:GetBucketPolicy",
        "s3:PutEncryptionConfiguration",
        "s3:GetEncryptionConfiguration",
        "s3:GetObjectVersionTorrent",
        "s3:AbortMultipartUpload",
        "s3:PutBucketTagging",
        "s3:GetBucketRequestPayment",
        "s3:GetAccessPointPolicyStatus",
        "s3:GetObjectTagging",
        "s3:GetMetricsConfiguration",
        "s3:PutBucketVersioning",
        "s3:GetBucketPublicAccessBlock",
        "s3:ListBucketMultipartUploads",
        "s3:PutMetricsConfiguration",
        "s3:PutObjectVersionTagging",
        "s3:GetBucketVersioning",
        "s3:GetBucketAcl",
        "s3:PutInventoryConfiguration",
        "s3:GetObjectTorrent",
        "s3:PutBucketWebsite",
        "s3:PutBucketRequestPayment",
        "s3:PutObjectRetention",
        "s3:GetBucketCORS",
        "s3:GetBucketLocation",
        "s3:GetAccessPointPolicy",
        "s3:GetObjectVersion",
        "s3:GetAccessPoint",
        "s3:GetAccountPublicAccessBlock",
        "s3:ListAllMyBuckets",
        "s3:ListAccessPoints",
        "s3:ListJobs"
      ],
      "Resource": [
        "arn:aws:s3:::<YOUR_BUCKET_NAME>",
        "arn:aws:s3:::<YOUR_BUCKET_NAME>/*"
      ]
    }
  ]
}
----

. Attach policy to user.
+
[source,shell]
----
aws iam put-user-policy \
  --user-name circleci-server \
  --policy-name circleci-server \
  --policy-document file://policy.json
----

. Create Access Key for user `circleci-server`.
+
NOTE: You will need this when you configure your server installation later.
+
[source,shell]
----
aws iam create-access-key --user-name circleci-server
----
+
The result should look like this:
+
[source, json]
----
{
  "AccessKey": {
        "UserName": "circleci-server",
        "Status": "Active",
        "CreateDate": "2017-07-31T22:24:41.576Z",
        "SecretAccessKey": <AWS_SECRET_ACCESS_KEY>,
        "AccessKeyId": <AWS_ACCESS_KEY_ID>
  }
}
----
--

endif::env-gcp[]

ifndef::env-aws[]

[#google-cloud-storage]
=== Google Cloud Storage

[#create-a-gcp-bucket]
==== a. Create a GCP bucket
If your server installation runs in a GKE cluster, ensure that your current IAM user is cluster admin for this cluster, as RBAC (role-based access control) objects need to be created. More information can be found in the link:https://cloud.google.com/kubernetes-engine/docs/how-to/role-based-access-control[GKE documentation].

[source,shell]
----
gsutil mb gs://circleci-server-bucket
----

[#set-up-authentication-gcp]
==== b. Set up authentication
The recommended method for workload/pod authentication is to use link:https://cloud.google.com/kubernetes-engine/docs/how-to/workload-identity[Workload Identity]. However, you may also use static credentials (JSON) key file).

. Create a Service Account.
+
[source,shell]
----
gcloud iam service-accounts create circleci-storage --description="Service account for CircleCI object storage" --display-name="circleci-storage"
----

. Bind the `objectAdmin` role to the service account.
+
[source,shell]
----
gcloud projects add-iam-policy-binding <PROJECT_ID> \
    --member="serviceAccount:circleci-storage@<PROJECT_ID>.iam.gserviceaccount.com" \
    --role="roles/storage.objectAdmin" \
    --condition='expression=resource.name.startsWith("projects/_/buckets/circleci-server-bucket"),title=restrict_bucket'
----

. Either enable Workload Identity or use static credentials.
+
[.tab.gcpauth.Workload_Identity]
--
**Option 1:** Workload Identity

When using Workload Identity you need to configure your account such that the workloads/pods can access the storage bucket from the cluster using the Kubernetes service account `"<K8S_NAMESPACE>/object-storage"`.

[source,shell]
----
gcloud iam service-accounts add-iam-policy-binding circleci-storage@<PROJECT_ID>.iam.gserviceaccount.com \
    --role roles/iam.workloadIdentityUser \
    --member "serviceAccount:<PROJECT_ID>.svc.id.goog[<K8S_NAMESPACE>/object-storage]"
----

[source,shell]
----
gcloud projects add-iam-policy-binding <PROJECT_ID> \
    --member serviceAccount:circleci-storage@<PROJECT_ID>.iam.gserviceaccount.com \
    --role roles/iam.serviceAccountTokenCreator \
    --condition=None
----
--

[tab.gcpauth.Static_credentials]
--
**Option 2:** Static credentials

If you are not using Workload Identity, create a JSON file containing static credentials.

[source,shell]
----
gcloud iam service-accounts keys create <KEY_FILE> \
    --iam-account circleci-storage@<PROJECT_ID>.iam.gserviceaccount.com
----
--
endif::env-aws[]

ifndef::pdf[]
[#next-steps]
== Next steps
* xref:phase-2-core-services#[Phase 2: Core Services Installation].
endif::[]
